[package]
name = "disboart"
version = "0.1.0"
edition = "2021"
authors = ["Andre Julius <noromoron@gmail.com>"]
repository = "https://github.com/NotNorom/disboart"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
backon = "0.4.1"
figment = { version = "0.10.9", features = ["toml"] }
poise = "0.5.5"
rand = "0.8.5"
serde = "1.0.163"
serde_derive = "1.0.163"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = [
    "rt-multi-thread",
], default-features = false }
tokio-stream = "0.1.14"
tokio-util = { version = "*", features = ["time"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [
    "tracing-log",
    "env-filter",
    "parking_lot",
] }
